2004-10-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp: Change GDK_ACTION_COPY -> GDK_ACTION_MOVE to make
	drag and drop from konqueror happy.

2004-10-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Explicitly include the esd cflags and libs
	variables. The flags for libgnome generally cover this, but as it
	turns out, not always. See bug #155559.

2004-09-09  callum  <callum@spooky-possum.org>

	* help/C/gnometris.xml: Update version numbers.

2004-08-24  callum  <callum@spooky-possum.org>

	* tetris.cpp: 
	* field.cpp:	
	* blockops.cpp: Change 0->NULL to prevent crashes on x86_64
	machines. Fixes bug #148618 and Gentoo bug #48948.

2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* pix/5blocks.png:
	* pix/5blocks-tig.png: 
	* pix/5blocks-tim.png:
	* pix/7blocks.png:
	* pix/7stones2-gn.png:
	* pix/7stones-gn.png: Moved these themes to the 
	gnome-games-extra-data package.

2004-08-05  William Jon McCann  <mccann@jhu.edu>

	* tetris.cpp (keyPressHandler): Only play sound if action
	occurs sucessfully.

2004-07-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnometris.schemas.in: Typo in the usebgimage schema (bug
	#148361).

2004-07-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnometris.xml: Update to document background and sound
	settings.

	* field.cpp: 
	* field.h:
	* tetris.cpp:	
	* tetris.h: Accept drops of application/x-color and
	x-special/gnome-background-reset.

	* Makefile.am: 
	* sounds/*:
	* sound.h:
	* sound.cpp:	
	* tetris.h:
	* tetris.cpp: Sound support added. Sounds courtesy of Richard
	Hoelscher.

2004-07-14  Paolo Borelli  <pborelli@katamail.com>

	* gnometris.schema.in:
	* Tetris.[ch]: add keyboard controls configurability.

2004-07-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp (setupPixmap): w->ww, h->hh to avoid warnings about shadowing members with local variables (bug #147543).

2004-07-13  Callum McKenzie  <callum@physics.otago.ac.nz>
