@@ -1,5 +1,8 @@
 2004-10-19  Callum McKenzie  <callum@physics.otago.ac.nz>
 
+	* sound.cpp: Conditionally compile sound support. configure.in
+	makes it optional so the code had better make it optional.
+
 	* tetris.cpp: Change GDK_ACTION_COPY -> GDK_ACTION_MOVE to make
 	drag and drop from konqueror happy.
 
